--- a/src/frontend/components/AddProjectComponent/addProject.module.css
+++ b/src/frontend/components/AddProjectComponent/addProject.module.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+@font-face {
+  font-family: 'minionpro-medium';
+  src: url('../../../fonts/minionpro-medium-webfont.woff2') format('woff2'),
+       url('../../../fonts/minionpro-medium-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 :root {
     --primary-bg: #1e1e1e;
-    --secondary-bg: #2d2d2d;
-    --primary-text: #D9D9D9;
+    --secondary-bg: #222222;
+    --primary-text: #e2e2e2;
     --secondary-text: #A2A2A2;
     --border-color: #6A6969;
     --highlight-bg: #85bcdb;
@@ -13,10 +24,9 @@
   .containerWrapper {
     width: 100%;
     min-height: 70vh;
-    background-color: var(--primary-bg);
+    background-color: #131313;
     display: flex;
     justify-content: center;
-    padding: 2rem 0;
     box-sizing: border-box;
   }
 
@@ -31,37 +41,44 @@
     align-items: center;
     gap: 1rem;
     padding: 1rem;
-    background-color: var(--secondary-bg);
     border-radius: 8px;
     max-height: 200px; 
     margin-bottom: 20px; 
     width: 97%; 
+    border-bottom: #236895 1px solid;
   }
 
   .toolbarHeader{
+    font-family: 'minionpro-medium';    
+    font-weight: bold;
     font-size: 1.4rem;
     margin-right: 40px; 
-    color: var(--highlight-bg);
+    color: #ffffff;
     text-align: left;
     margin: 0px; 
+    margin-right: 5px;
+    letter-spacing: 2px;
   }
   
   .toolbar button {
+    font-family: "Outfit";
+    font-weight: bolder;
     display: flex;
     align-items: center;
     gap: 0.5rem;
     padding: 0.5rem 1rem;
-    background-color: var(--input-bg);
-    color: var(--primary-text);
+    background-color: #0076c4eb;
+    color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 7px;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    min-width: 100px;
   }
   
   .toolbar button:hover {
-    background-color: var(--highlight-bg);
+    background-color: rgb(0, 67, 154);
   }
   
   
@@ -94,8 +111,8 @@
     width: 98%;
     padding: 0.75rem;
     margin-bottom: .5rem;
-    background-color: var(--input-bg);
-    color: var(--primary-text);
+    background-color: #1c1c1c;
+    color: white;
     border: 1px solid var(--border-color);
     border-radius: 4px;
     font-size: 1rem;
@@ -118,15 +135,17 @@
   }
   
   .title {
+    font-family: 'minionpro-medium';    
     display: flex; 
     align-items: center;
     gap: 1rem;
-    font-size: 2rem;
-    color: rgb(185, 185, 185);
+    font-size: 2.2rem;
+    color: rgb(225, 225, 225);
     text-align: left;
     border-left: 5px solid #3498db;
     border-radius: 5px; 
     padding: 0px 0px 0px 20px; 
+    letter-spacing: 2px;
   }
   
   .projectInfo {
@@ -134,12 +153,11 @@
   }
   
   .projectNameInput,
-  .projectDescriptionInput,
-  .fileInput{
+  .projectDescriptionInput{
     width: 98%;
     padding: 0.75rem;
     margin-bottom: 1rem;
-    background-color: var(--input-bg);
+    background-color: #1c1c1c;
     color: var(--primary-text);
     border: 1px solid var(--border-color);
     border-radius: 4px;
@@ -147,11 +165,12 @@
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
   }
 
+
   .urlInput{
     width: 95%;
     padding: 0.75rem;
     margin-bottom: 1rem;
-    background-color: var(--input-bg);
+    background-color: #191919;
     color: var(--primary-text);
     border: 1px solid var(--border-color);
     border-radius: 4px;
@@ -164,9 +183,7 @@
     width: 95%; 
     padding: 0.75rem;
     margin-bottom: 1rem;
-    background-color: var(--input-bg);
     color: var(--primary-text);
-    border: 1px solid var(--border-color);
     border-radius: 4px;
     font-size: 1rem;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
@@ -190,13 +207,15 @@
     min-height: 20px;
     padding: 0.75rem;
     margin-bottom: 0.5rem;
-    background-color: var(--input-bg);
+    background-color: #191919;
     color: var(--primary-text);
-    border: 1px solid var(--border-color);
     border-radius: 4px;
     font-size: 1rem;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
     resize: vertical;
+    border: none; 
+    border-bottom: 1px solid grey;
+
   }
   
   .cellTypeSelect {
@@ -218,7 +237,7 @@
     width: 100%;
     padding: 0.75rem;
     margin-bottom: 1rem;
-    background-color: var(--input-bg);
+    background-color: #191919;
     color: var(--primary-text);
     border: 1px solid var(--border-color);
     border-radius: 4px;
@@ -271,7 +290,7 @@
     border-radius: 4px;
     padding: 1rem;
     box-sizing: border-box;
-    background-color: var(--secondary-bg);
+    background-color: #191919;
     overflow: hidden;
     width: 100%;
     min-width: 0; /* This ensures the cell can shrink below its content size */
@@ -323,7 +342,7 @@
     min-height: 100px;
     padding: 0.75rem;
     margin-bottom: 1rem;
-    background-color: var(--input-bg);
+    background-color: #191919;
     color: var(--primary-text);
     border: 1px solid var(--border-color);
     border-radius: 4px;
@@ -362,7 +381,7 @@
   .saveButton {
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 12px;
     cursor: pointer;
     font-size: 1.2rem;
     transition: background-color 0.3s ease, transform 0.1s ease;
@@ -430,7 +449,7 @@
   }
   
   .saveButton {
-    background-color: var(--secondary-bg);
+    background-color: #1c1c1c;
     color: var(--primary-text);
     border: 1px solid var(--highlight-bg);
   }
@@ -451,8 +470,10 @@
     background-color: var(--secondary-bg);
     color: var(--primary-text);
     border: 1px solid var(--border-color);
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-right: 20px;
   }
   
   .fileInput::file-selector-button:hover {
