--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -141,7 +141,8 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background: rgba(50, 50, 50, 0.95);
+  background: rgb(25, 25, 25, .95);
+  background: none; 
   backdrop-filter: blur(5px);
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
